--- a/movie_editor.ipynb
+++ b/movie_editor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
     "page_name = \"Coronavirus\"\n",
     "page = wikipedia.page(page_name)\n",
     "title = page.title\n",
-    "script = page.content \n",
+    "script = page.content[:100] \n",
     "### Here would be the place to parse script\n",
     "print(\"Video Title: \", title)\n",
     "# print(script)"
@@ -88,17 +88,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Folder paths\n",
-    "AUDIO_PATH = 'audio/' + title + \".mp3\"\n",
-    "IMG_FOLDER = 'imgs/' + title\n",
+    "IMG_FOLDER = 'images/' + title + \"/\"\n",
     "RESIZE = IMG_FOLDER + \"/resize\"\n",
-    "VID_PATH = \"videos/\" + title + \".mp4\"\n",
+    "AUDIO_FOLDER = 'audio/'\n",
+    "VID_FOLDER = 'videos/'\n",
     "\n",
-    "for folder in [IMG_FOLDER, RESIZE]:\n",
+    "AUDIO_PATH = AUDIO_FOLDER + title + \".mp3\"\n",
+    "VID_PATH = VID_FOLDER + title + \".mp4\"\n",
+    "\n",
+    "for folder in [IMG_FOLDER, RESIZE, AUDIO_FOLDER, VID_FOLDER]:\n",
     "    if not os.path.exists(folder):\n",
     "        os.makedirs(folder)"
    ]
@@ -112,14 +115,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Audio Duration:  00:01:18\n"
+      "Audio Duration:  00:00:07\n"
      ]
     }
    ],
@@ -208,7 +211,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -278,6 +281,262 @@
     "print(\"Video Encoding completed in time: \", dur)\n",
     "os.system(\"say 'video writing completed'\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int(1/4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = slice(-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hell'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = 'hello'\n",
+    "s[:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "string indices must be integers",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-15-32b37d43effc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ms\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: string indices must be integers"
+     ]
+    }
+   ],
+   "source": [
+    "s[None]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this that\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"this\",\n",
+    "     \"that\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['AUDIO_PATH',\n",
+       " 'AudioClip',\n",
+       " 'AudioFileClip',\n",
+       " 'BLACK',\n",
+       " 'BLACK_GIZEH',\n",
+       " 'ColorClip',\n",
+       " 'CompositeAudioClip',\n",
+       " 'CompositeVideoClip',\n",
+       " 'DURATION',\n",
+       " 'IMG_DISPLAY_DURATION',\n",
+       " 'IMG_FOLDER',\n",
+       " 'IMG_SHAPE',\n",
+       " 'ImageClip',\n",
+       " 'ImageSequenceClip',\n",
+       " 'In',\n",
+       " 'Out',\n",
+       " 'RESIZE',\n",
+       " 'TextClip',\n",
+       " 'VIDEO_SIZE',\n",
+       " 'VID_PATH',\n",
+       " 'VideoClip',\n",
+       " 'VideoFileClip',\n",
+       " 'WHITE',\n",
+       " 'WHITE_GIZEH',\n",
+       " '_',\n",
+       " '_14',\n",
+       " '_17',\n",
+       " '_20',\n",
+       " '_25',\n",
+       " '_29',\n",
+       " '_30',\n",
+       " '_9',\n",
+       " '__',\n",
+       " '___',\n",
+       " '__builtin__',\n",
+       " '__builtins__',\n",
+       " '__doc__',\n",
+       " '__loader__',\n",
+       " '__name__',\n",
+       " '__package__',\n",
+       " '__spec__',\n",
+       " '_dh',\n",
+       " '_i',\n",
+       " '_i1',\n",
+       " '_i10',\n",
+       " '_i11',\n",
+       " '_i12',\n",
+       " '_i13',\n",
+       " '_i14',\n",
+       " '_i15',\n",
+       " '_i16',\n",
+       " '_i17',\n",
+       " '_i18',\n",
+       " '_i19',\n",
+       " '_i2',\n",
+       " '_i20',\n",
+       " '_i21',\n",
+       " '_i22',\n",
+       " '_i23',\n",
+       " '_i24',\n",
+       " '_i25',\n",
+       " '_i26',\n",
+       " '_i27',\n",
+       " '_i28',\n",
+       " '_i29',\n",
+       " '_i3',\n",
+       " '_i30',\n",
+       " '_i31',\n",
+       " '_i32',\n",
+       " '_i4',\n",
+       " '_i5',\n",
+       " '_i6',\n",
+       " '_i7',\n",
+       " '_i8',\n",
+       " '_i9',\n",
+       " '_ih',\n",
+       " '_ii',\n",
+       " '_iii',\n",
+       " '_oh',\n",
+       " 'afx',\n",
+       " 'audio_clip',\n",
+       " 'b',\n",
+       " 'clips_array',\n",
+       " 'concatenate',\n",
+       " 'concatenate_audioclips',\n",
+       " 'concatenate_videoclips',\n",
+       " 'cvsecs',\n",
+       " 'datetime',\n",
+       " 'download_webfile',\n",
+       " 'dur',\n",
+       " 'exit',\n",
+       " 'ffmpeg_tools',\n",
+       " 'final_img_paths',\n",
+       " 'fixed_durations',\n",
+       " 'fname',\n",
+       " 'fnames',\n",
+       " 'folder',\n",
+       " 'gTTS',\n",
+       " 'get_ipython',\n",
+       " 'gz',\n",
+       " 'image_sequence',\n",
+       " 'imageio',\n",
+       " 'img_array',\n",
+       " 'img_as_ubyte',\n",
+       " 'imread',\n",
+       " 'imsave',\n",
+       " 'ipython_display',\n",
+       " 'method',\n",
+       " 'os',\n",
+       " 'page',\n",
+       " 'page_name',\n",
+       " 'path',\n",
+       " 'preview',\n",
+       " 'quit',\n",
+       " 'render_text',\n",
+       " 'resize',\n",
+       " 's',\n",
+       " 'save_path',\n",
+       " 'script',\n",
+       " 'show',\n",
+       " 'sliders',\n",
+       " 'start',\n",
+       " 'sys',\n",
+       " 'time',\n",
+       " 'title',\n",
+       " 'title_text',\n",
+       " 'transfx',\n",
+       " 'tts',\n",
+       " 'vfx',\n",
+       " 'video',\n",
+       " 'videotools',\n",
+       " 'wikipedia']"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
