--- a/movie_editor.ipynb
+++ b/movie_editor.ipynb
@@ -586,6 +586,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "no\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    fake(x)\n",
+    "except Exception as e:\n",
+    "    print('no')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
