--- a/wikipedia_scraping_image downloading.ipynb
+++ b/wikipedia_scraping_image downloading.ipynb
@@ -46,52 +46,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for p in top_25_list:\n",
-    "    print(p.url)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from gtts import gTTS"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tts = gTTS(top_25_list[4].content[:10000], lang='en')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "top_25_list[4].title"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "top_25_list[4].content[:10000][:100]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -100,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,20 +63,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Process jesper tjäder reached the end of page\n",
-      "Stored 5 links in url_files/jesper tjäder.txt\n",
-      "Start downloading with link file url_files/jesper tjäder.txt..........\n",
-      "Successfully downloaded 5 images\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "for a in table['Article']:\n",
+    "    master_download(main_keyword = a, num_requested = 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "master_download(main_keyword='jesper tjäder', num_requested=5)"
    ]
